<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:id="@+id/welcomeText"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        android:textIsSelectable="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login"
        android:id="@+id/pleaseLoginText"
        android:layout_marginTop="60dp"
        android:textSize="24sp"
        android:textIsSelectable="false"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/emailField"
        android:hint="@string/hint_email"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/passwordField"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_password"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_below="@+id/emailField"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
